--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.4",
     "express-ejs-layouts": "^2.0.0",
     "lodash": "^4.3.0",
+    "moment": "^2.11.2",
     "morgan": "^1.6.1"
   }
 }
